added pause and more obstacles

--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
       <h3 class="text-muted">coatsn</h3>
     </div>
 
-    <canvas id="demoCanvas" width="500" height="300"></canvas>
+    <canvas id="demoCanvas" width="500" height="300" style="background-color: black;"></canvas>
 </body>
 
 <div class="footer">
