added score and backgoround

--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,28 @@
 </body>
 
 <div class="footer">
+  <section>
+    <section>
+      <div>
+        How to play:
+      </div>
+      <ol>
+        <li>Shoot guys for points.</li>
+        <li>Don't die.</li>
+        <li>See how long it takes for you to die.</li>
+      </ol>
+    </section>
+    <div>
+      Controls:
+    </div>
+    <ol>
+      <li>Up = Up</li>
+      <li>Down = Down</li>
+      <li>Left = Left</li>
+      <li>Right = Right</li>
+      <li>Space = Fire</li>
+    </ol>
+  </section>
   <p>♥ from coatsn</p>
 </div>
 </div>
