updated player and explosion animation

--- a/app/index.html
+++ b/app/index.html
@@ -31,12 +31,12 @@
 
   <div class="container">
     <div class="header">
-      <ul class="nav nav-pills pull-right">
+      <!-- <ul class="nav nav-pills pull-right">
         <li class="active"><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
-      </ul>
-      <h3 class="text-muted">coatsn</h3>
+      </ul> -->
+      <h2 class="text-muted">Kolour Killerz</h3>
     </div>
 
     <canvas id="demoCanvas" width="500" height="300" style="background-color: black;"></canvas>
@@ -45,18 +45,18 @@
 <div class="footer">
   <section>
     <section>
-      <div>
+      <h1>
         How to play:
-      </div>
+      </h1>
       <ol>
         <li>Shoot guys for points.</li>
         <li>Don't die.</li>
         <li>See how long it takes for you to die.</li>
       </ol>
     </section>
-    <div>
+    <h1>
       Controls:
-    </div>
+    </h1>
     <ol>
       <li>Up = Up</li>
       <li>Down = Down</li>
