--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,7 @@
       <h2 class="text-muted">Kolour Killerz</h3>
     </div>
 
-    <canvas id="demoCanvas" width="500" height="300" style="background-color: black;"></canvas>
+    <canvas id="canvas" style="background-color: black;"></canvas>
 </body>
 
 <div class="footer">
