changed site a bit

--- a/app/index.html
+++ b/app/index.html
@@ -30,43 +30,48 @@
     <![endif]-->
 
   <div class="container">
-    <div class="header">
-      <!-- <ul class="nav nav-pills pull-right">
+    <!-- <div class="header"> -->
+    <!-- <ul class="nav nav-pills pull-right">
         <li class="active"><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
       </ul> -->
-      <h2 class="text-muted">Kolour Killerz</h3>
-    </div>
+    <h1>Kolour Killerz</h1>
+      <div>
+        <div style="float:left;">
+          <h1>
+            How to play:
+          </h1>
+          <ol>
+            <li>Shoot guys for points.</li>
+            <li>Don't die.</li>
+            <li>See how long it takes for you to die.</li>
+          </ol>
+        </div>
+        <div style="margin-left: 2em; float:left;">
+          <h1>
+            Controls:
+          </h1>
+          <ol>
+            <li>Up = Up</li>
+            <li>Down = Down</li>
+            <li>Left = Left</li>
+            <li>Right = Right</li>
+            <li>Space = Fire</li>
+          </ol>
+        </div>
+      </div>
+      <div style="clear:both;">
+        <p>♥ from coatsn</p>
+      </div>
+      <!-- </div> -->
 
-    <canvas id="canvas" style="background-color: black;"></canvas>
+      <canvas id="canvas" style="background-color: black;"></canvas>
 </body>
 
-<div class="footer">
-  <section>
-    <section>
-      <h1>
-        How to play:
-      </h1>
-      <ol>
-        <li>Shoot guys for points.</li>
-        <li>Don't die.</li>
-        <li>See how long it takes for you to die.</li>
-      </ol>
-    </section>
-    <h1>
-      Controls:
-    </h1>
-    <ol>
-      <li>Up = Up</li>
-      <li>Down = Down</li>
-      <li>Left = Left</li>
-      <li>Right = Right</li>
-      <li>Space = Fire</li>
-    </ol>
-  </section>
-  <p>♥ from coatsn</p>
-</div>
+<!-- <div class="footer"> -->
+<div>
+
 </div>
 
 <!-- build:js scripts/vendor.js -->
