--- a/app/index.html
+++ b/app/index.html
@@ -30,28 +30,22 @@
     <![endif]-->
 
   <div class="container">
-    <!-- <div class="header"> -->
-    <!-- <ul class="nav nav-pills pull-right">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul> -->
-    <h1>Kolour Killerz</h1>
-      <div>
-        <div style="float:left;">
-          <h1>
-            How to play:
-          </h1>
+      <div class="intro">
+        <h1>Dizzle Dazzle</h1>
+        <div class="intro-section">
+          <h2>
+            How to Play
+          </h2>
           <ol>
-            <li>Shoot guys for points.</li>
-            <li>Don't die.</li>
-            <li>See how long it takes for you to die.</li>
+            <li>Shoot bad guys for points.</li>
+            <li>Don't fly into them.</li>
+            <li>Don't go out of bounds.</li>
           </ol>
         </div>
-        <div style="margin-left: 2em; float:left;">
-          <h1>
-            Controls:
-          </h1>
+        <div class="intro-section">
+          <h2>
+            Controls
+          </h2>
           <ol>
             <li>Up = Up</li>
             <li>Down = Down</li>
@@ -60,11 +54,20 @@
             <li>Space = Fire</li>
           </ol>
         </div>
+        <div class="intro-section">
+          <h2>
+            Caveat
+          </h2>
+          <ol>
+            <li>This is a development build.</li>
+            <li>Performance may vary by computer.</li>
+            <li>The site currently requires a keyboard and mouse.</li>
+          </ol>
+        </div>
+        <div style="clear:both;">
+          <p>♥ from coatsn</p>
+        </div>
       </div>
-      <div style="clear:both;">
-        <p>♥ from coatsn</p>
-      </div>
-      <!-- </div> -->
 
       <canvas id="canvas" style="background-color: black;"></canvas>
 </body>
