fixed bullet boundary; made obstacle repeat fluid; made obstacles fill level; added rings; added win scenario

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
 
   <div class="container">
       <div class="intro">
-        <h1>Dizzle Dazzle</h1>
+        <h1>Dingle Dangle</h1>
         <div class="intro-section">
           <h2>
             How to Play
@@ -40,6 +40,7 @@
             <li>Shoot bad guys for points.</li>
             <li>Don't fly into them.</li>
             <li>Don't go out of bounds.</li>
+            <li>Collect the rings!</li>
           </ol>
         </div>
         <div class="intro-section">
