adding HUGE change for sprites

--- a/app/index.html
+++ b/app/index.html
@@ -24,14 +24,20 @@
   <!-- endbuild -->
 </head>
 
-<body onload="init();">
+<body class="game-body" onload="init();">
   <!--[if lt IE 10]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
   <div class="container">
-      <div class="intro">
-        <h1>Dingle Dangle</h1>
+    <div class="intro">
+      <div>
+        <div>
+        <h1>Zipper Zapper</h1>
+        <div>
+        <div style="clear:both;">
+          <p>♥ from coatsn</p>
+        </div>
         <div class="intro-section">
           <h2>
             How to Play
@@ -39,6 +45,7 @@
           <ol>
             <li>Shoot bad guys for points.</li>
             <li>Don't fly into them.</li>
+            <li>Don't get hit by their laser bubbles.</li>
             <li>Don't go out of bounds.</li>
             <li>Collect the rings!</li>
           </ol>
@@ -65,12 +72,11 @@
             <li>The site currently requires a keyboard and mouse.</li>
           </ol>
         </div>
-        <div style="clear:both;">
-          <p>♥ from coatsn</p>
-        </div>
       </div>
 
       <canvas id="canvas" style="background-color: black;"></canvas>
+
+      <div>Enjoy the game.</div>
 </body>
 
 <!-- <div class="footer"> -->
